exports[`no-anonymous-default-export > invalid(1): @decorator export default class {} 1`] = `

Filename: path/to/foo.ts

  1 | @decorator export default class {}

`;

exports[`no-anonymous-default-export > invalid(1): @decorator export default class {} 2`] = `

Message:
> 1 | @decorator export default class {}
    |                           ^^^^^ The class should be named.

Suggestion 1/1: Name it as \`Foo\`.:
  1 | @decorator export default class Foo {}

`;

exports[`no-anonymous-default-export > invalid(1): export default function () {} 1`] = `

  1 | export default function () {}

`;

exports[`no-anonymous-default-export > invalid(1): export default function () {} 2`] = `

Message:
> 1 | export default function () {}
    |                ^^^^^^^^^ The function should be named.

`;

exports[`no-anonymous-default-export > invalid(10): export default class{} 1`] = `

Filename: path/to/foo.js

  1 | export default class{}

`;

exports[`no-anonymous-default-export > invalid(10): export default class{} 2`] = `

Message:
> 1 | export default class{}
    |                ^^^^^ The class should be named.

Suggestion 1/1: Name it as \`Foo\`.:
  1 | export default class Foo{}

`;

exports[`no-anonymous-default-export > invalid(11): export default class {} 1`] = `

Filename: path/to/foo-bar.js

  1 | export default class {}

`;

exports[`no-anonymous-default-export > invalid(11): export default class {} 2`] = `

Message:
> 1 | export default class {}
    |                ^^^^^ The class should be named.

Suggestion 1/1: Name it as \`FooBar\`.:
  1 | export default class FooBar {}

`;

exports[`no-anonymous-default-export > invalid(12): export default class {} 1`] = `

Filename: path/to/foo_bar.js

  1 | export default class {}

`;

exports[`no-anonymous-default-export > invalid(12): export default class {} 2`] = `

Message:
> 1 | export default class {}
    |                ^^^^^ The class should be named.

Suggestion 1/1: Name it as \`FooBar\`.:
  1 | export default class FooBar {}

`;

exports[`no-anonymous-default-export > invalid(13): export default class {} 1`] = `

Filename: path/to/foo+bar.js

  1 | export default class {}

`;

exports[`no-anonymous-default-export > invalid(13): export default class {} 2`] = `

Message:
> 1 | export default class {}
    |                ^^^^^ The class should be named.

Suggestion 1/1: Name it as \`FooBar\`.:
  1 | export default class FooBar {}

`;

exports[`no-anonymous-default-export > invalid(14): export default class {} 1`] = `

Filename: path/to/foo+bar123.js

  1 | export default class {}

`;

exports[`no-anonymous-default-export > invalid(14): export default class {} 2`] = `

Message:
> 1 | export default class {}
    |                ^^^^^ The class should be named.

Suggestion 1/1: Name it as \`FooBar123\`.:
  1 | export default class FooBar123 {}

`;

exports[`no-anonymous-default-export > invalid(15): export default class {} 1`] = `

Filename: path/to/foo*.js

  1 | export default class {}

`;

exports[`no-anonymous-default-export > invalid(15): export default class {} 2`] = `

Message:
> 1 | export default class {}
    |                ^^^^^ The class should be named.

Suggestion 1/1: Name it as \`Foo\`.:
  1 | export default class Foo {}

`;

exports[`no-anonymous-default-export > invalid(16): export default class {} 1`] = `

Filename: path/to/[foo].js

  1 | export default class {}

`;

exports[`no-anonymous-default-export > invalid(16): export default class {} 2`] = `

Message:
> 1 | export default class {}
    |                ^^^^^ The class should be named.

Suggestion 1/1: Name it as \`Foo\`.:
  1 | export default class Foo {}

`;

exports[`no-anonymous-default-export > invalid(17): export default class {} 1`] = `

Filename: path/to/class.js

  1 | export default class {}

`;

exports[`no-anonymous-default-export > invalid(17): export default class {} 2`] = `

Message:
> 1 | export default class {}
    |                ^^^^^ The class should be named.

Suggestion 1/1: Name it as \`Class\`.:
  1 | export default class Class {}

`;

exports[`no-anonymous-default-export > invalid(18): export default class {} 1`] = `

Filename: path/to/foo.helper.js

  1 | export default class {}

`;

exports[`no-anonymous-default-export > invalid(18): export default class {} 2`] = `

Message:
> 1 | export default class {}
    |                ^^^^^ The class should be named.

Suggestion 1/1: Name it as \`Foo\`.:
  1 | export default class Foo {}

`;

exports[`no-anonymous-default-export > invalid(19): export default class {} 1`] = `

Filename: path/to/foo.bar.js

  1 | export default class {}

`;

exports[`no-anonymous-default-export > invalid(19): export default class {} 2`] = `

Message:
> 1 | export default class {}
    |                ^^^^^ The class should be named.

Suggestion 1/1: Name it as \`Foo\`.:
  1 | export default class Foo {}

`;

exports[`no-anonymous-default-export > invalid(2): export default @decorator class {} 1`] = `

Filename: path/to/foo.ts

  1 | export default @decorator class {}

`;

exports[`no-anonymous-default-export > invalid(2): export default @decorator class {} 2`] = `

Message:
> 1 | export default @decorator class {}
    |                ^^^^^^^^^^^^^^^^ The class should be named.

Suggestion 1/1: Name it as \`Foo\`.:
  1 | export default @decorator class Foo {}

`;

exports[`no-anonymous-default-export > invalid(2): export default class {} 1`] = `

  1 | export default class {}

`;

exports[`no-anonymous-default-export > invalid(2): export default class {} 2`] = `

Message:
> 1 | export default class {}
    |                ^^^^^ The class should be named.

`;

exports[`no-anonymous-default-export > invalid(20): export default class {} 1`] = `

Filename: path/to/foo.test.js

  1 | export default class {}

`;

exports[`no-anonymous-default-export > invalid(20): export default class {} 2`] = `

Message:
> 1 | export default class {}
    |                ^^^^^ The class should be named.

Suggestion 1/1: Name it as \`Foo\`.:
  1 | export default class Foo {}

`;

exports[`no-anonymous-default-export > invalid(21): export default class {} 1`] = `

Filename: path/to/.foo.js

  1 | export default class {}

`;

exports[`no-anonymous-default-export > invalid(21): export default class {} 2`] = `

Message:
> 1 | export default class {}
    |                ^^^^^ The class should be named.

`;

exports[`no-anonymous-default-export > invalid(22): let Foo, Foo_, foo, foo_\nexport default class {} 1`] = `

Filename: path/to/foo.js

  1 | let Foo, Foo_, foo, foo_
  2 | export default class {}

`;

exports[`no-anonymous-default-export > invalid(22): let Foo, Foo_, foo, foo_\nexport default class {} 2`] = `

Message:
  1 | let Foo, Foo_, foo, foo_
> 2 | export default class {}
    |                ^^^^^ The class should be named.

Suggestion 1/1: Name it as \`Foo__\`.:
  1 | let Foo, Foo_, foo, foo_
  2 | export default class Foo__ {}

`;

exports[`no-anonymous-default-export > invalid(23): let Foo, Foo_, foo, foo_\nexport default (class{}) 1`] = `

Filename: path/to/foo.js

  1 | let Foo, Foo_, foo, foo_
  2 | export default (class{})

`;

exports[`no-anonymous-default-export > invalid(23): let Foo, Foo_, foo, foo_\nexport default (class{}) 2`] = `

Message:
  1 | let Foo, Foo_, foo, foo_
> 2 | export default (class{})
    |                 ^^^^^ The class should be named.

Suggestion 1/1: Name it as \`Foo__\`.:
  1 | let Foo, Foo_, foo, foo_
  2 | export default (class Foo__{})

`;

exports[`no-anonymous-default-export > invalid(24): export default (class extends class {} {}) 1`] = `

Filename: path/to/foo.js

  1 | export default (class extends class {} {})

`;

exports[`no-anonymous-default-export > invalid(24): export default (class extends class {} {}) 2`] = `

Message:
> 1 | export default (class extends class {} {})
    |                 ^^^^^^^^^^^^^^^^^^^^^^ The class should be named.

Suggestion 1/1: Name it as \`Foo\`.:
  1 | export default (class Foo extends class {} {})

`;

exports[`no-anonymous-default-export > invalid(25): let Exports, Exports_, exports, exports_\nexports = class {} 1`] = `

Filename: path/to/exports.js

  1 | let Exports, Exports_, exports, exports_
  2 | exports = class {}

`;

exports[`no-anonymous-default-export > invalid(25): let Exports, Exports_, exports, exports_\nexports = class {} 2`] = `

Message:
  1 | let Exports, Exports_, exports, exports_
> 2 | exports = class {}
    |           ^^^^^ The class should be named.

Suggestion 1/1: Name it as \`Exports__\`.:
  1 | let Exports, Exports_, exports, exports_
  2 | exports = class Exports__ {}

`;

exports[`no-anonymous-default-export > invalid(26): module.exports = class {} 1`] = `

Filename: path/to/module.js

  1 | module.exports = class {}

`;

exports[`no-anonymous-default-export > invalid(26): module.exports = class {} 2`] = `

Message:
> 1 | module.exports = class {}
    |                  ^^^^^ The class should be named.

Suggestion 1/1: Name it as \`Module\`.:
  1 | module.exports = class Module {}

`;

exports[`no-anonymous-default-export > invalid(27): module.exports = () => {} 1`] = `

Filename: path/to/module.js

  1 | module.exports = () => {}

`;

exports[`no-anonymous-default-export > invalid(27): module.exports = () => {} 2`] = `

Message:
> 1 | module.exports = () => {}
    |                     ^^ The arrow function should be named.

Suggestion 1/1: Name it as \`module_\`.:
  1 | const module_ = () => {};
  2 | module.exports = module_;

`;

exports[`no-anonymous-default-export > invalid(28): exports = () => {} 1`] = `

Filename: path/to/module.js

  1 | exports = () => {}

`;

exports[`no-anonymous-default-export > invalid(28): exports = () => {} 2`] = `

Message:
> 1 | exports = () => {}
    |              ^^ The arrow function should be named.

Suggestion 1/1: Name it as \`module_\`.:
  1 | const module_ = () => {};
  2 | exports = module_;

`;

exports[`no-anonymous-default-export > invalid(29): export default function () {} 1`] = `

Filename: path/to/foo.js

  1 | export default function () {}

`;

exports[`no-anonymous-default-export > invalid(29): export default function () {} 2`] = `

Message:
> 1 | export default function () {}
    |                ^^^^^^^^^ The function should be named.

Suggestion 1/1: Name it as \`foo\`.:
  1 | export default function foo () {}

`;

exports[`no-anonymous-default-export > invalid(3): export default () => {} 1`] = `

  1 | export default () => {}

`;

exports[`no-anonymous-default-export > invalid(3): export default () => {} 2`] = `

Message:
> 1 | export default () => {}
    |                   ^^ The arrow function should be named.

`;

exports[`no-anonymous-default-export > invalid(3): export default @first @second class {} 1`] = `

Filename: path/to/foo.ts

  1 | export default @first @second class {}

`;

exports[`no-anonymous-default-export > invalid(3): export default @first @second class {} 2`] = `

Message:
> 1 | export default @first @second class {}
    |                ^^^^^^^^^^^^^^^^^^^^ The class should be named.

Suggestion 1/1: Name it as \`Foo\`.:
  1 | export default @first @second class Foo {}

`;

exports[`no-anonymous-default-export > invalid(30): export default function* () {} 1`] = `

Filename: path/to/foo.js

  1 | export default function* () {}

`;

exports[`no-anonymous-default-export > invalid(30): export default function* () {} 2`] = `

Message:
> 1 | export default function* () {}
    |                ^^^^^^^^^^ The generator function should be named.

Suggestion 1/1: Name it as \`foo\`.:
  1 | export default function* foo () {}

`;

exports[`no-anonymous-default-export > invalid(31): export default async function* () {} 1`] = `

Filename: path/to/foo.js

  1 | export default async function* () {}

`;

exports[`no-anonymous-default-export > invalid(31): export default async function* () {} 2`] = `

Message:
> 1 | export default async function* () {}
    |                ^^^^^^^^^^^^^^^^ The async generator function should be named.

Suggestion 1/1: Name it as \`foo\`.:
  1 | export default async function* foo () {}

`;

exports[`no-anonymous-default-export > invalid(32): export default async function*() {} 1`] = `

Filename: path/to/foo.js

  1 | export default async function*() {}

`;

exports[`no-anonymous-default-export > invalid(32): export default async function*() {} 2`] = `

Message:
> 1 | export default async function*() {}
    |                ^^^^^^^^^^^^^^^ The async generator function should be named.

Suggestion 1/1: Name it as \`foo\`.:
  1 | export default async function* foo () {}

`;

exports[`no-anonymous-default-export > invalid(33): export default async function *() {} 1`] = `

Filename: path/to/foo.js

  1 | export default async function *() {}

`;

exports[`no-anonymous-default-export > invalid(33): export default async function *() {} 2`] = `

Message:
> 1 | export default async function *() {}
    |                ^^^^^^^^^^^^^^^^ The async generator function should be named.

Suggestion 1/1: Name it as \`foo\`.:
  1 | export default async function * foo () {}

`;

exports[`no-anonymous-default-export > invalid(34): export default async function   *   () {} 1`] = `

Filename: path/to/foo.js

  1 | export default async function   *   () {}

`;

exports[`no-anonymous-default-export > invalid(34): export default async function   *   () {} 2`] = `

Message:
> 1 | export default async function   *   () {}
    |                ^^^^^^^^^^^^^^^^^^^^^ The async generator function should be named.

Suggestion 1/1: Name it as \`foo\`.:
  1 | export default async function   *   foo () {}

`;

exports[`no-anonymous-default-export > invalid(35): export default async function * /* comment */ () {} 1`] = `

Filename: path/to/foo.js

  1 | export default async function * /* comment */ () {}

`;

exports[`no-anonymous-default-export > invalid(35): export default async function * /* comment */ () {} 2`] = `

Message:
> 1 | export default async function * /* comment */ () {}
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The async generator function should be named.

Suggestion 1/1: Name it as \`foo\`.:
  1 | export default async function * /* comment */ foo () {}

`;

exports[`no-anonymous-default-export > invalid(36): export default async function * // comment\n() {} 1`] = `

Filename: path/to/foo.js

  1 | export default async function * // comment
  2 | () {}

`;

exports[`no-anonymous-default-export > invalid(36): export default async function * // comment\n() {} 2`] = `

Message:
> 1 | export default async function * // comment
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | () {}
    | ^ The async generator function should be named.

Suggestion 1/1: Name it as \`foo\`.:
  1 | export default async function * // comment
  2 |  foo () {}

`;

exports[`no-anonymous-default-export > invalid(37): let Foo, Foo_, foo, foo_\nexport default async function * () {} 1`] = `

Filename: path/to/foo.js

  1 | let Foo, Foo_, foo, foo_
  2 | export default async function * () {}

`;

exports[`no-anonymous-default-export > invalid(37): let Foo, Foo_, foo, foo_\nexport default async function * () {} 2`] = `

Message:
  1 | let Foo, Foo_, foo, foo_
> 2 | export default async function * () {}
    |                ^^^^^^^^^^^^^^^^^ The async generator function should be named.

Suggestion 1/1: Name it as \`foo__\`.:
  1 | let Foo, Foo_, foo, foo_
  2 | export default async function * foo__ () {}

`;

exports[`no-anonymous-default-export > invalid(38): let Foo, Foo_, foo, foo_\nexport default (async function * () {}) 1`] = `

Filename: path/to/foo.js

  1 | let Foo, Foo_, foo, foo_
  2 | export default (async function * () {})

`;

exports[`no-anonymous-default-export > invalid(38): let Foo, Foo_, foo, foo_\nexport default (async function * () {}) 2`] = `

Message:
  1 | let Foo, Foo_, foo, foo_
> 2 | export default (async function * () {})
    |                 ^^^^^^^^^^^^^^^^^ The async generator function should be named.

Suggestion 1/1: Name it as \`foo__\`.:
  1 | let Foo, Foo_, foo, foo_
  2 | export default (async function * foo__ () {})

`;

exports[`no-anonymous-default-export > invalid(39): let Exports, Exports_, exports, exports_\nexports = function() {} 1`] = `

Filename: path/to/exports.js

  1 | let Exports, Exports_, exports, exports_
  2 | exports = function() {}

`;

exports[`no-anonymous-default-export > invalid(39): let Exports, Exports_, exports, exports_\nexports = function() {} 2`] = `

Message:
  1 | let Exports, Exports_, exports, exports_
> 2 | exports = function() {}
    |           ^^^^^^^^ The function should be named.

Suggestion 1/1: Name it as \`exports__\`.:
  1 | let Exports, Exports_, exports, exports_
  2 | exports = function exports__ () {}

`;

exports[`no-anonymous-default-export > invalid(4): export default function * () {} 1`] = `

  1 | export default function * () {}

`;

exports[`no-anonymous-default-export > invalid(4): export default function * () {} 2`] = `

Message:
> 1 | export default function * () {}
    |                ^^^^^^^^^^^ The generator function should be named.

`;

exports[`no-anonymous-default-export > invalid(40): module.exports = function() {} 1`] = `

Filename: path/to/module.js

  1 | module.exports = function() {}

`;

exports[`no-anonymous-default-export > invalid(40): module.exports = function() {} 2`] = `

Message:
> 1 | module.exports = function() {}
    |                  ^^^^^^^^ The function should be named.

Suggestion 1/1: Name it as \`module_\`.:
  1 | module.exports = function module_ () {}

`;

exports[`no-anonymous-default-export > invalid(41): export default () => {} 1`] = `

Filename: path/to/foo.js

  1 | export default () => {}

`;

exports[`no-anonymous-default-export > invalid(41): export default () => {} 2`] = `

Message:
> 1 | export default () => {}
    |                   ^^ The arrow function should be named.

Suggestion 1/1: Name it as \`foo\`.:
  1 | const foo = () => {};
  2 | export default foo;

`;

exports[`no-anonymous-default-export > invalid(42): export default async () => {} 1`] = `

Filename: path/to/foo.js

  1 | export default async () => {}

`;

exports[`no-anonymous-default-export > invalid(42): export default async () => {} 2`] = `

Message:
> 1 | export default async () => {}
    |                         ^^ The async arrow function should be named.

Suggestion 1/1: Name it as \`foo\`.:
  1 | const foo = async () => {};
  2 | export default foo;

`;

exports[`no-anonymous-default-export > invalid(43): export default () => {}; 1`] = `

Filename: path/to/foo.js

  1 | export default () => {};

`;

exports[`no-anonymous-default-export > invalid(43): export default () => {}; 2`] = `

Message:
> 1 | export default () => {};
    |                   ^^ The arrow function should be named.

Suggestion 1/1: Name it as \`foo\`.:
  1 | const foo = () => {};
  2 | export default foo;

`;

exports[`no-anonymous-default-export > invalid(44): export default() => {} 1`] = `

Filename: path/to/foo.js

  1 | export default() => {}

`;

exports[`no-anonymous-default-export > invalid(44): export default() => {} 2`] = `

Message:
> 1 | export default() => {}
    |                  ^^ The arrow function should be named.

Suggestion 1/1: Name it as \`foo\`.:
  1 | const foo = () => {};
  2 | export default foo;

`;

exports[`no-anonymous-default-export > invalid(45): export default foo => {} 1`] = `

Filename: path/to/foo.js

  1 | export default foo => {}

`;

exports[`no-anonymous-default-export > invalid(45): export default foo => {} 2`] = `

Message:
> 1 | export default foo => {}
    |                    ^^ The arrow function should be named.

Suggestion 1/1: Name it as \`foo_\`.:
  1 | const foo_ = foo => {};
  2 | export default foo_;

`;

exports[`no-anonymous-default-export > invalid(46): export default (( () => {} )) 1`] = `

Filename: path/to/foo.js

  1 | export default (( () => {} ))

`;

exports[`no-anonymous-default-export > invalid(46): export default (( () => {} )) 2`] = `

Message:
> 1 | export default (( () => {} ))
    |                      ^^ The arrow function should be named.

Suggestion 1/1: Name it as \`foo\`.:
  1 | const foo = (( () => {} ));
  2 | export default foo;

`;

exports[`no-anonymous-default-export > invalid(47): /* comment 1 */ export /* comment 2 */ default /* comment 3 */  () => {} 1`] = `

Filename: path/to/foo.js

  1 | /* comment 1 */ export /* comment 2 */ default /* comment 3 */  () => {}

`;

exports[`no-anonymous-default-export > invalid(47): /* comment 1 */ export /* comment 2 */ default /* comment 3 */  () => {} 2`] = `

Message:
> 1 | /* comment 1 */ export /* comment 2 */ default /* comment 3 */  () => {}
    |                                                                    ^^ The arrow function should be named.

Suggestion 1/1: Name it as \`foo\`.:
  1 | /* comment 1 */ const foo = () => {};
  2 | export /* comment 2 */ default /* comment 3 */  foo;

`;

exports[`no-anonymous-default-export > invalid(48): // comment 1\nexport\n// comment 2\ndefault\n// comment 3\n() => {} 1`] = `

Filename: path/to/foo.js

  1 | // comment 1
  2 | export
  3 | // comment 2
  4 | default
  5 | // comment 3
  6 | () => {}

`;

exports[`no-anonymous-default-export > invalid(48): // comment 1\nexport\n// comment 2\ndefault\n// comment 3\n() => {} 2`] = `

Message:
  1 | // comment 1
  2 | export
  3 | // comment 2
  4 | default
  5 | // comment 3
> 6 | () => {}
    |    ^^ The arrow function should be named.

Suggestion 1/1: Name it as \`foo\`.:
  1 | // comment 1
  2 | const foo = () => {};
  3 | export
  4 | // comment 2
  5 | default
  6 | // comment 3
  7 | foo;

`;

exports[`no-anonymous-default-export > invalid(49): let Foo, Foo_, foo, foo_\nexport default async () => {} 1`] = `

Filename: path/to/foo.js

  1 | let Foo, Foo_, foo, foo_
  2 | export default async () => {}

`;

exports[`no-anonymous-default-export > invalid(49): let Foo, Foo_, foo, foo_\nexport default async () => {} 2`] = `

Message:
  1 | let Foo, Foo_, foo, foo_
> 2 | export default async () => {}
    |                         ^^ The async arrow function should be named.

Suggestion 1/1: Name it as \`foo__\`.:
  1 | let Foo, Foo_, foo, foo_
  2 | const foo__ = async () => {};
  3 | export default foo__;

`;

exports[`no-anonymous-default-export > invalid(5): export default async function () {} 1`] = `

  1 | export default async function () {}

`;

exports[`no-anonymous-default-export > invalid(5): export default async function () {} 2`] = `

Message:
> 1 | export default async function () {}
    |                ^^^^^^^^^^^^^^^ The async function should be named.

`;

exports[`no-anonymous-default-export > invalid(50): let Exports, Exports_, exports, exports_\nexports = (( () => {} )) 1`] = `

Filename: path/to/exports.js

  1 | let Exports, Exports_, exports, exports_
  2 | exports = (( () => {} ))

`;

exports[`no-anonymous-default-export > invalid(50): let Exports, Exports_, exports, exports_\nexports = (( () => {} )) 2`] = `

Message:
  1 | let Exports, Exports_, exports, exports_
> 2 | exports = (( () => {} ))
    |                 ^^ The arrow function should be named.

Suggestion 1/1: Name it as \`exports__\`.:
  1 | let Exports, Exports_, exports, exports_
  2 | const exports__ = (( () => {} ));
  3 | exports = exports__;

`;

exports[`no-anonymous-default-export > invalid(51): // comment 1\nmodule\n// comment 2\n.exports\n// comment 3\n=\n// comment 4\n() => {}; 1`] = `

Filename: path/to/module.js

  1 | // comment 1
  2 | module
  3 | // comment 2
  4 | .exports
  5 | // comment 3
  6 | =
  7 | // comment 4
  8 | () => {};

`;

exports[`no-anonymous-default-export > invalid(51): // comment 1\nmodule\n// comment 2\n.exports\n// comment 3\n=\n// comment 4\n() => {}; 2`] = `

Message:
  1 | // comment 1
  2 | module
  3 | // comment 2
  4 | .exports
  5 | // comment 3
  6 | =
  7 | // comment 4
> 8 | () => {};
    |    ^^ The arrow function should be named.

Suggestion 1/1: Name it as \`module_\`.:
  1 | // comment 1
  2 | const module_ = () => {};
  3 | module
  4 | // comment 2
  5 | .exports
  6 | // comment 3
  7 | =
  8 | // comment 4
  9 | module_;

`;

exports[`no-anonymous-default-export > invalid(52): (( exports = (( () => {} )) )) 1`] = `

Filename: path/to/foo.js

  1 | (( exports = (( () => {} )) ))

`;

exports[`no-anonymous-default-export > invalid(52): (( exports = (( () => {} )) )) 2`] = `

Message:
> 1 | (( exports = (( () => {} )) ))
    |                    ^^ The arrow function should be named.

Suggestion 1/1: Name it as \`foo\`.:
  1 | const foo = (( () => {} ));
  2 | (( exports = foo ));

`;

exports[`no-anonymous-default-export > invalid(53): (( module.exports = (( () => {} )) )) 1`] = `

Filename: path/to/foo.js

  1 | (( module.exports = (( () => {} )) ))

`;

exports[`no-anonymous-default-export > invalid(53): (( module.exports = (( () => {} )) )) 2`] = `

Message:
> 1 | (( module.exports = (( () => {} )) ))
    |                           ^^ The arrow function should be named.

Suggestion 1/1: Name it as \`foo\`.:
  1 | const foo = (( () => {} ));
  2 | (( module.exports = foo ));

`;

exports[`no-anonymous-default-export > invalid(54): (( exports = (( () => {} )) )); 1`] = `

Filename: path/to/foo.js

  1 | (( exports = (( () => {} )) ));

`;

exports[`no-anonymous-default-export > invalid(54): (( exports = (( () => {} )) )); 2`] = `

Message:
> 1 | (( exports = (( () => {} )) ));
    |                    ^^ The arrow function should be named.

Suggestion 1/1: Name it as \`foo\`.:
  1 | const foo = (( () => {} ));
  2 | (( exports = foo ));

`;

exports[`no-anonymous-default-export > invalid(55): (( module.exports = (( () => {} )) )); 1`] = `

Filename: path/to/foo.js

  1 | (( module.exports = (( () => {} )) ));

`;

exports[`no-anonymous-default-export > invalid(55): (( module.exports = (( () => {} )) )); 2`] = `

Message:
> 1 | (( module.exports = (( () => {} )) ));
    |                           ^^ The arrow function should be named.

Suggestion 1/1: Name it as \`foo\`.:
  1 | const foo = (( () => {} ));
  2 | (( module.exports = foo ));

`;

exports[`no-anonymous-default-export > invalid(56): if (a) module.exports = () => {}; 1`] = `

Filename: path/to/foo.js

  1 | if (a) module.exports = () => {};

`;

exports[`no-anonymous-default-export > invalid(56): if (a) module.exports = () => {}; 2`] = `

Message:
> 1 | if (a) module.exports = () => {};
    |                            ^^ The arrow function should be named.

`;

exports[`no-anonymous-default-export > invalid(57): label: module.exports = () => {}; 1`] = `

Filename: path/to/foo.js

  1 | label: module.exports = () => {};

`;

exports[`no-anonymous-default-export > invalid(57): label: module.exports = () => {}; 2`] = `

Message:
> 1 | label: module.exports = () => {};
    |                            ^^ The arrow function should be named.

`;

exports[`no-anonymous-default-export > invalid(58): switch (a) {\n\tcase 1:\n\t\tmodule.exports = () => {};\n} 1`] = `

Filename: path/to/foo.js

  1 | switch (a) {
  2 | 	case 1:
  3 | 		module.exports = () => {};
  4 | }

`;

exports[`no-anonymous-default-export > invalid(58): switch (a) {\n\tcase 1:\n\t\tmodule.exports = () => {};\n} 2`] = `

Message:
  1 | switch (a) {
  2 | 	case 1:
> 3 | 		module.exports = () => {};
    | 		                    ^^ The arrow function should be named.
  4 | }

Suggestion 1/1: Name it as \`foo\`.:
  1 | switch (a) {
  2 | 	case 1:
  3 | 		const foo = () => {};
  4 | 		module.exports = foo;
  5 | }

`;

exports[`no-anonymous-default-export > invalid(59): if (a) module.exports = function () {}; 1`] = `

Filename: path/to/foo.js

  1 | if (a) module.exports = function () {};

`;

exports[`no-anonymous-default-export > invalid(59): if (a) module.exports = function () {}; 2`] = `

Message:
> 1 | if (a) module.exports = function () {};
    |                         ^^^^^^^^^ The function should be named.

Suggestion 1/1: Name it as \`foo\`.:
  1 | if (a) module.exports = function foo () {};

`;

exports[`no-anonymous-default-export > invalid(6): export default async function * () {} 1`] = `

  1 | export default async function * () {}

`;

exports[`no-anonymous-default-export > invalid(6): export default async function * () {} 2`] = `

Message:
> 1 | export default async function * () {}
    |                ^^^^^^^^^^^^^^^^^ The async generator function should be named.

`;

exports[`no-anonymous-default-export > invalid(7): export default async () => {} 1`] = `

  1 | export default async () => {}

`;

exports[`no-anonymous-default-export > invalid(7): export default async () => {} 2`] = `

Message:
> 1 | export default async () => {}
    |                         ^^ The async arrow function should be named.

`;

exports[`no-anonymous-default-export > invalid(8): export default class {} 1`] = `

Filename: path/to/foo.js

  1 | export default class {}

`;

exports[`no-anonymous-default-export > invalid(8): export default class {} 2`] = `

Message:
> 1 | export default class {}
    |                ^^^^^ The class should be named.

Suggestion 1/1: Name it as \`Foo\`.:
  1 | export default class Foo {}

`;

exports[`no-anonymous-default-export > invalid(9): export default class extends class {} {} 1`] = `

Filename: path/to/foo.js

  1 | export default class extends class {} {}

`;

exports[`no-anonymous-default-export > invalid(9): export default class extends class {} {} 2`] = `

Message:
> 1 | export default class extends class {} {}
    |                ^^^^^^^^^^^^^^^^^^^^^^ The class should be named.

Suggestion 1/1: Name it as \`Foo\`.:
  1 | export default class Foo extends class {} {}

`;
